--- a/src/core.webapp/index.html
+++ b/src/core.webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="<en-us></en-us>">
   <head>
-    <title>Briskhome</title>
+    <title>BRISKHOME</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Briskhome house monitoring and automation system">
@@ -10,9 +10,19 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name = "viewport" content = "width = device-width">
     <meta name = "viewport" content = "initial-scale = 1.0, user-scalable = no">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/assets/img/favicon-16x16.png">
+    <link rel="manifest" href="/static/assets/img/manifest.json">
+    <link rel="mask-icon" href="/static/assets/img/safari-pinned-tab.svg" color="#f9d21c">
+    <link rel="shortcut icon" href="/static/assets/img/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="BRISKHOME">
+    <meta name="application-name" content="BRISKHOME">
+    <meta name="msapplication-config" content="/static/assets/img/browserconfig.xml">
+    <meta name="theme-color" content="#f9d21c">
   </head>
   <body>
     <section id="briskhome"></section>
-    <script type="text/javascript" src="./static/assets/js/briskhome.bundle.js"></script>
+    <script type="text/javascript" src="/static/assets/js/briskhome.bundle.js"></script>
   </body>
 </html>
